--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="invalid text-left mt-1 ml-3" id="errorContraseñaRep"></div>
-            <div class="card-footer d-flex flex-row justify-content-evenly">
+            <div class="d-flex flex-row justify-content-evenly">
                 <button type="reset" id="Limpiar" class="btn btn-secondary ">Limpiar</button>
                 <button type="submit" id="Enviar" class="btn btn-primary ">Enviar</button>
             </div>
