--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Formulario</title>
     <script src="js/bootstrap.bundle.js" defer></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="js/script.js" defer></script>
 </head>
-<body class="container-fluid w-43">
+<body class="container-fluid w-43 mb-5">
 <div class="shadow card text-center m-auto mt-5">
     <div class="card-header">
         <h2>Formulario</h2>
